<?xml version="1.0"?>
<package format="2">
  <name>mltdma_project11</name>
  <version>0.0.0</version>
  <description>
    Launch files and configuration for UNH's marine perception data capture platfrom.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
